<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Medi-Search</string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="medi_searchTitle">Medi-Search</string>
    <string name="title_activity_patient_main">Main Activity</string>
    <string name="medi_search_logo">Medi-Search Logo</string>
    <string name="medi_search_brand_girl">Medi Search Brand Girl</string>
    <string name="create_account">Create Account</string>
    <string name="userName">Name</string>
    <string name="userEmail">Email</string>
    <string name="userPassword">Password</string>
    <string name="userConfirmPassword">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_instead">Sign-In Instead</string>
    <string name="already_a_member">Already A Member?</string>
    <string name="sign_in">Sign In</string>
    <string name="client_id" tools:ignore="TypographyDashes">95530679681-5e3tbabb5g1alf63smkvr92oh6roavq8.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_conditions">Conditions</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_assessment">Assessment</string>
    <string name="profile_name">Terry Mochire</string>
    <string name="salutation">Hello Terry, </string>
    <string name="welcome_message">Welcome to Medi-Search. I can help you know more about your health.</string>
    <string name="start_symptom_assessment">Start Symptom Assessment</string>
    <string name="featured_title">Featured</string>
    <string name="search">Search Your Symptoms</string>
    <string name="radio_button_text">Radio Button</string>
    <string name="back_icon">Back Icon</string>
    <string name="assessment_question">Assessment Question</string>
    <string name="get_diagnosis">Get Diagnosis</string>
    <string name="condition_name">Condition Name</string>
    <string name="condition_specialist">Condition Specialist</string>
    <string name="condition_probability">Condition probability</string>
    <string name="condition_common_name">Condition Common Name</string>
</resources>