<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mochire.tech.ui.main.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mochire.tech.ui.main.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_conditions"
        android:name="com.mochire.tech.ui.main.fragments.ConditionsFragment"
        android:label="@string/title_conditions"
        tools:layout="@layout/fragment_conditions" />
    <fragment
        android:id="@+id/navigation_assessment"
        android:name="com.mochire.tech.ui.main.fragments.AssessmentFragment"
        android:label="@string/title_assessment"
        tools:layout="@layout/fragment_assessment"/>


</navigation>